--- a/css/product.css
+++ b/css/product.css
@@ -86,12 +86,12 @@
 *,::after,::before{
     box-sizing: border-box;
 }
-body{
+/* body{
     margin: 2rem 0 0 0;
     background-color: #fff;
     color: var(--dark-color);
     font-family: var(--body-font);
-}
+} */
 h1{
     font-size: var(--h1-font-size);
 }
@@ -253,19 +253,22 @@ article:nth-child(20){
     font-weight: bold;
 }
 /*Move left*/
-.card:hover{
+#card:hover{
     box-shadow: 0 .5rem 1rem #D1D9E6;
 }
-.card:hover .card__name{
+#card:hover .card__name{
     left: 0;
 }
-.card:hover .card__img{
+#card:hover .card__img{
     transform: rotate(30deg);
     margin-left: 3.5rem;
 }
-.card:hover .card__precis{
+#card:hover .card__precis{
     margin-left: 3.5rem;
     padding: 0 1.5rem;
+}
+.price-strike{
+    text-decoration: line-through;
 }
 
 /*-- MEDIA QUERIES --*/
