--- a/css/style.css
+++ b/css/style.css
@@ -569,10 +569,10 @@ span {
   }
   html,body{
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
   }
   .cta-text {
     margin-left: 30px;
